<resources>
    <string name="app_name">iRent</string>
    <string name="recuperar_senha">Recuperar Senha</string>
    <string name="imagem_recuperar_senha">Imagem recuperar senha</string>
    <string name="email">Email</string>
    <string name="obs">Obs.: Insira seu email no campo indicado e clique em Recuperar para enviar sua senha ao email
        cadastrado
    </string>
    <string name="recuperar">Recuperar</string>
    <string name="eu_quero">Eu quero</string>
    <string name="buscar">Buscar</string>
    <string name="criar_oferta">Criar Oferta</string>
    <string name="cone_localiza_o">Ícone localização</string>
    <string name="cone_casa">Ícone casa</string>
    <string name="criar_anuncio">Criar Anúncio</string>
</resources>
