<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".Inicial">

    <TextView
            android:text="@string/eu_quero"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:id="@+id/textViewEuQuero"
            app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginEnd="16dp"
            app:layout_constraintStart_toStartOf="parent"
            android:layout_marginStart="16dp"
            android:textSize="30sp"
            android:gravity="center_horizontal"
            android:textStyle="bold"
            android:textColor="#000000"
            android:layout_marginTop="80dp"
            app:layout_constraintTop_toTopOf="parent"/>

    <ImageView
            android:layout_width="80dp"
            android:layout_height="40dp"
            app:srcCompat="@drawable/placeholder"
            android:id="@+id/imageViewPlaceholder"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toStartOf="@+id/buttonBuscar"
            app:layout_constraintHorizontal_bias="0.49"
            android:layout_marginStart="32dp"
            app:layout_constraintBottom_toBottomOf="@+id/buttonBuscar"
            app:layout_constraintTop_toTopOf="@+id/buttonBuscar"
            android:contentDescription="@string/cone_localiza_o"/>

    <Button
            android:text="@string/buscar"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:id="@+id/buttonBuscar"
            android:layout_marginTop="80dp"
            app:layout_constraintTop_toBottomOf="@+id/textViewEuQuero"
            app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginEnd="32dp"
            app:layout_constraintStart_toEndOf="@+id/imageViewPlaceholder"/>

    <Button
            android:text="@string/criar_oferta"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:id="@+id/buttonCriarOferta"
            app:layout_constraintEnd_toEndOf="@+id/buttonBuscar"
            android:layout_marginTop="16dp"
            app:layout_constraintTop_toBottomOf="@+id/buttonBuscar"
            app:layout_constraintStart_toStartOf="@+id/buttonBuscar"
            />

    <ImageView
            android:layout_width="63dp"
            android:layout_height="39dp"
            app:srcCompat="@drawable/home"
            android:id="@+id/imageViewHome"
            app:layout_constraintTop_toTopOf="@+id/buttonCriarOferta"
            app:layout_constraintBottom_toBottomOf="@+id/buttonCriarOferta"
            app:layout_constraintStart_toStartOf="parent"
            android:layout_marginStart="32dp"
            app:layout_constraintEnd_toStartOf="@+id/buttonCriarOferta"
            android:contentDescription="@string/cone_casa"/>

    <Button
            android:text="@string/criar_anuncio"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:id="@+id/buttonCriarAnuncio"
            app:layout_constraintEnd_toEndOf="@+id/buttonBuscar"
            android:layout_marginTop="16dp"
            app:layout_constraintTop_toBottomOf="@+id/buttonCriarOferta"
            app:layout_constraintStart_toStartOf="@+id/buttonBuscar"
            app:layout_constraintHorizontal_bias="0.0"/>

    <ImageView
            android:layout_width="54dp"
            android:layout_height="64dp"
            app:srcCompat="@drawable/megaphone"
            android:id="@+id/imageViewMegaphone"
            app:layout_constraintBottom_toBottomOf="@+id/buttonCriarAnuncio"
            app:layout_constraintTop_toTopOf="@+id/buttonCriarAnuncio"
            app:layout_constraintStart_toStartOf="parent"
            android:layout_marginStart="32dp"
            app:layout_constraintEnd_toStartOf="@+id/buttonCriarAnuncio"
            android:contentDescription="Ícone megafone"/>

</androidx.constraintlayout.widget.ConstraintLayout>